--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type":"module",
   "scripts": {
     "start": "node dist/app.js",
     "build": "tsc -p .",
-    "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node -r dotenv/config\" src/app.ts "
+    "dev": "nodemon --watch \"src/**/*.ts\" --exec \" node --loader ts-node/esm -r dotenv/config\" src/app.ts "
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "nodemon": "^2.0.18",
@@ -16,7 +18,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.4.2"
