--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.3",
+    "@types/multer": "^1.4.7",
     "aws-sdk": "^2.1172.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
@@ -28,6 +29,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.2"
+    "mongoose": "^6.4.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
