--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node -r dotenv/config dist/app.js",
     "build": "tsc -p .",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \" node --loader ts-node/esm -r dotenv/config\" src/app.ts "
   },
